# autoafids_prep

./: .gitignore  Dockerfile  README.md  pyproject.toml
.snakemake/metadata/: L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE0MDkyNS9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE0NzczNy9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE0ODg0MC9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE0OTUzOS9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE1MTUyNi9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE1MTYyNy9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE1NjYzNy9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE2MDEyMy9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE2MzEyOS9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE3ODk1MC9tcmkvVDEubWd6  L2hvbWUvUk9CQVJUUy9hdGFoYS9ncmFoYW0vc2NyYXRjaC9hZmlkcy1kYXRhL2RhdGEvZGF0YXNldHMvQUZJRHMtSENQL2Rlcml2YXRpdmVzL2ZyZWVzdXJmZXIvc3ViLTE5OTY1NS9tcmkvVDEubWd6  (+184 more)
autoafids_prep/: pipeline_description.json  run.py
autoafids_prep/config/: config.yml  snakebids.yml
docker/: Dockerfile  README.md
workflow/: Snakefile
(+7 files in other folders)
